--- a/Project.ipynb
+++ b/Project.ipynb
@@ -16,13 +16,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Import essential libraries\n",
-    "im"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Capstone Project Course\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Print basic statement\n",
+    "print('Hello Capstone Project Course')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
