Further updates, without creds

--- a/Toronto_pt3_Clustering_forSubmission.ipynb
+++ b/Toronto_pt3_Clustering_forSubmission.ipynb
@@ -2274,22 +2274,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Double click __here__\n",
-    "<!--# 10.1 Set up Foursquare credentials\n",
-    "CLIENT_ID = 'BM0CR1IATYT5MYOT22LOQUBZQIRHP5USSCRMHTUCLXBM0LXK'#'your-client-ID' # your Foursquare ID\n",
-    "CLIENT_SECRET = 'DVJJFZIYHTAZOU0AH5FBIU4X0LYIDSKNMCK3WRYG2U20G4JJ'#'your-client-secret' # your Foursquare Secret\n",
-    "VERSION = '20180605' # Foursquare API version\n",
-    "\n",
-    "#print('Your credentails:')\n",
-    "#print('CLIENT_ID: ' + CLIENT_ID)\n",
-    "#print('CLIENT_SECRET:' + CLIENT_SECRET)\n",
-    "#-->"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 72,
    "metadata": {},
@@ -23793,11 +23777,8 @@
     "    try:\n",
     "        columns.append('{}{} Most Common Venue'.format(ind+1, indicators[ind]))\n",
     "    except:\n",
-    "        columns.append('{}th Most Common Venue'.format(ind+1))#How does it know to use this from 4th coln onwards?\n",
-    "                                                                #Ans: Maybe in the indicators[ind] structure...1,2,3\n",
-    "                                                                    #So after 3, it uses the except statement\n",
-    "                                                                        #Because try on 4th element will give error\n",
-    "\n",
+    "        columns.append('{}th Most Common Venue'.format(ind+1))\n",
+    "        \n",
     "# create a new dataframe\n",
     "neighborhoods_venues_sorted = pd.DataFrame(columns=columns)\n",
     "neighborhoods_venues_sorted['Postcode'] = toronto_grouped['Postcode']\n",
@@ -23965,7 +23946,7 @@
     "\n",
     "toronto_new = data_merged #Contains postcode----->borough------>lat----->long\n",
     "\n",
-    "# merge toronto_grouped with toronto_data to add latitude/longitude for each neighborhood\n",
+    "# merge \n",
     "toronto_new = toronto_new.join(neighborhoods_venues_sorted.set_index('Postcode'), on='PostalCode')#Because 'PostalCode' was the name of the column in data_merged, & thus toronto_new\n",
     "\n",
     "toronto_new.tail()"
