--- a/Capstone_DataInfo.ipynb
+++ b/Capstone_DataInfo.ipynb
@@ -61,7 +61,7 @@
    "metadata": {},
    "source": [
     "* Cluster neighbourhoods/streets/postcodes that have good transport v/s poor transport connections\n",
-    "  * Idea would be- neighbourhoods within 400m clustered for having *good transport*\n",
+    "  * Idea would be- find neighbourhoods that have transport options within 400m, which is a reasonable walking distance that does not take too long to cover.\n",
     "  * Henceforth, we will search for transport options within a 400m radius of a given geo-location"
    ]
   },
