Modified text in 2.5

--- a/Capstone_DataInfo.ipynb
+++ b/Capstone_DataInfo.ipynb
@@ -101,7 +101,8 @@
     "* _Metro_\n",
     "* ~~Light Rail~~ _Trikk_\n",
     "* _Bus Stop_\n",
-    "* _Bus Station_"
+    "* _Bus Station_\n",
+    "* _Train Station_"
    ]
   },
   {
