--- a/Capstone_Introduction.ipynb
+++ b/Capstone_Introduction.ipynb
@@ -54,6 +54,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The target audience and stakeholders is therefore the transport department in the Govt. who want to know which areas of Oslo need better transport options"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "To accomplish this task, one would need data on the different types of transport options available, where they are available and how many are available.   \n",
     "Such information may be obtained through the Foursquare API, that has been mandated to be used.\n",
     "Additionally, one would need location data of postcode/street to pin-point the areas that need improvement."
