--- a/Capstone_DataInfo.ipynb
+++ b/Capstone_DataInfo.ipynb
@@ -98,10 +98,9 @@
     "In general, Foursquare data is not very good for Oslo, compared to USA/Canada, possibly due to insufficient awareness/use  \n",
     "\n",
     "To do a transport project, would need to individually extract different transport modes:  \n",
-    "* _Metro_\n",
-    "* ~~Light Rail~~ _Trikk_\n",
-    "* _Bus Stop_\n",
-    "* _Bus Station_\n",
+    "* _Trikk/Tram_\n",
+    "* _Bus Stop_/_Bus Station_\n",
+    "* _T-bane/Metro_\n",
     "* _Train Station_"
    ]
   },
