--- a/wk4/Capstone_part1.ipynb
+++ b/wk4/Capstone_part1.ipynb
@@ -15,10 +15,24 @@
     "* extract geo-coordinates of each street address\n",
     "  * Street start address > street end address\n",
     "* Use Foursquare API to obtain:\n",
-    "  * Bus stations\n",
-    "  * Bus stops\n",
-    "  * Metro\n",
-    "  * Light rail"
+    "  * Bus routes\n",
+    "  * Tram\n",
+    "  * Light rail\n",
+    "  * Trains\n",
+    "* Cluster the transport options down to the street level and draw conclusions\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----\n",
+    "> Jump to :  \n",
+    "* [Part 2](https://github.com/Niladri-B/Coursera_Captstone/blob/master/wk4/Capstone_part2.ipynb), *Extracting Foursquare Data*\n",
+    "* [Part 3](https://github.com/Niladri-B/Coursera_Captstone/blob/master/wk4/Capstone_part3.ipynb) , *Exploratory Data Analysis*\n",
+    "* [Part 4](https://github.com/Niladri-B/Coursera_Captstone/blob/master/wk4/Capstone_part4.ipynb), *Clustering and Visualising*\n",
+    "* [Part 5](https://github.com/Niladri-B/Coursera_Captstone/blob/master/wk4/Capstone_part5.ipynb), *Conclusion & Discussion*"
    ]
   },
   {
@@ -153,24 +167,6 @@
     "          * ~~Estimate street length~~\n",
     "          * Establish mid-point\n",
     "      * Save in table2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#type(soup)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#soup"
    ]
   },
   {
