--- a/wk4/Capstone_part5.ipynb
+++ b/wk4/Capstone_part5.ipynb
@@ -12,10 +12,10 @@
    "metadata": {},
    "source": [
     "> Jump to :  \n",
-    "* [Part 1](https://github.com/amypeniston/Coursera_Capstone/blob/master/Week_3_Scraping.ipynb) *Extracting Street Addresses & Coordinates* \n",
-    "* [Part 2](https://github.com/amypeniston/Coursera_Capstone/blob/master/Week_3_Scraping.ipynb), *Extracting Foursquare Data*\n",
-    "* [Part 3]() , *Exploratory Data Analysis*\n",
-    "* [Part 4](), *Clustering and Visualising*"
+    "* [Part 1](https://github.com/Niladri-B/Coursera_Captstone/blob/master/wk4/Capstone_part1.ipynb) *Extracting Street Addresses & Coordinates* \n",
+    "* [Part 2](https://github.com/Niladri-B/Coursera_Captstone/blob/master/wk4/Capstone_part2.ipynb), *Extracting Foursquare Data*\n",
+    "* [Part 3](https://github.com/Niladri-B/Coursera_Captstone/blob/master/wk4/Capstone_part3.ipynb) , *Exploratory Data Analysis*\n",
+    "* [Part 4](https://github.com/Niladri-B/Coursera_Captstone/blob/master/wk4/Capstone_part4.ipynb), *Clustering and Visualising*\n"
    ]
   },
   {
