--- a/wk4/Capstone_part3.ipynb
+++ b/wk4/Capstone_part3.ipynb
@@ -12,8 +12,10 @@
    "metadata": {},
    "source": [
     "> Jump to :  \n",
-    "* [Part 1](https://github.com/amypeniston/Coursera_Capstone/blob/master/Week_3_Scraping.ipynb) *Extracting Street Addresses & Coordinates* \n",
-    "* [Part 2](https://github.com/amypeniston/Coursera_Capstone/blob/master/Week_3_Scraping.ipynb), *Extracting Foursquare Data*"
+    "* [Part 1](https://github.com/Niladri-B/Coursera_Captstone/blob/master/wk4/Capstone_part1.ipynb) *Extracting Street Addresses & Coordinates* \n",
+    "* [Part 2](https://github.com/Niladri-B/Coursera_Captstone/blob/master/wk4/Capstone_part2.ipynb), *Extracting Foursquare Data*\n",
+    "* [Part 4](https://github.com/Niladri-B/Coursera_Captstone/blob/master/wk4/Capstone_part4.ipynb), *Clustering and Visualising*\n",
+    "* [Part 5](https://github.com/Niladri-B/Coursera_Captstone/blob/master/wk4/Capstone_part5.ipynb), *Conclusion & Discussion*"
    ]
   },
   {
