--- a/wk4/Capstone_part5.ipynb
+++ b/wk4/Capstone_part5.ipynb
@@ -129,6 +129,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## References"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. [Erik Bolstad](https://www.erikbolstad.no/postnummer-koordinatar/kommune.php?kommunenummer=301)\n",
+    "2. [Foursquare API](https://foursquare.com)\n",
+    "3. [Folium]()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
