--- a/wk4/Capstone_part5.ipynb
+++ b/wk4/Capstone_part5.ipynb
@@ -141,7 +141,7 @@
    "source": [
     "1. [Erik Bolstad](https://www.erikbolstad.no/postnummer-koordinatar/kommune.php?kommunenummer=301)\n",
     "2. [Foursquare API](https://foursquare.com)\n",
-    "3. [Folium]()"
+    "3. [Folium](https://python-visualization.github.io/folium/)"
    ]
   },
   {
